--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
             </plugin>
             <plugin>
               <artifactId>maven-clean-plugin</artifactId>
-              <version>2.2</version>
+              <version>3.10.1</version>
             </plugin>
             <plugin>
               <artifactId>maven-compiler-plugin</artifactId>
@@ -125,11 +125,11 @@
             </plugin>
             <plugin>
               <artifactId>maven-install-plugin</artifactId>
-              <version>2.2</version>
+              <version>3.10.1</version>
             </plugin>
             <plugin>
               <artifactId>maven-jar-plugin</artifactId>
-              <version>2.2</version>
+              <version>3.10.</version>
             </plugin>
             <plugin>
               <artifactId>maven-javadoc-plugin</artifactId>
@@ -141,7 +141,7 @@
             </plugin>
             <plugin>
               <artifactId>maven-rar-plugin</artifactId>
-              <version>2.2</version>
+              <version>3.3.2</version>
             </plugin>
             <plugin>
               <artifactId>maven-release-plugin</artifactId>
