--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
             </plugin>
             <plugin>
               <artifactId>maven-assembly-plugin</artifactId>
-              <version>2.2-beta-2</version>
+              <version>3.7.1</version>
             </plugin>
             <plugin>
               <artifactId>maven-clean-plugin</artifactId>
